--- a/src/AaxAudioConverter/WhatsNewForm.de.resx
+++ b/src/AaxAudioConverter/WhatsNewForm.de.resx
@@ -117,64 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="FileNaming" xml:space="preserve">
-    <value>Muster für Dateinamen</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="lblPrev.Size" type="System.Drawing.Size, System.Drawing">
+    <value>204, 13</value>
   </data>
-  <data name="FileNamingDescription" xml:space="preserve">
-    <value>Dateinamen werden nach gewähltem Muster erzeugt. Platzhalter werden durch aktuelle Werte ersetzt.</value>
+  <data name="lblPrev.Text" xml:space="preserve">
+    <value>Alle Versionshinweise auch im Handbuch.</value>
   </data>
-  <data name="TitleNaming" xml:space="preserve">
-    <value>Muster für Titel-Tag </value>
-  </data>
-  <data name="TitleNamingDescription" xml:space="preserve">
-    <value>Tags für Titel jedes Stücks werden nach gewähltem Muster erzeugt. Platzhalter werden durch aktuelle Werte ersetzt.</value>
-  </data>
-  <data name="TrackNumbering" xml:space="preserve">
-    <value>Nummerierung der Stücke</value>
-  </data>
-  <data name="TrackNumberingDescription" xml:space="preserve">
-    <value>Nummerierung der einzelnen Stücke im Titel-Tag. Platzhalter werden durch aktuelle Werte ersetzt.</value>
-  </data>
-  <data name="Narrator" xml:space="preserve">
-    <value>Sprecher hinzufügen</value>
-  </data>
-  <data name="NarratorDescription" xml:space="preserve">
-    <value>Fügt Namen des Sprechers zum Künstler-Tag hinzu, wenn [ja].</value>
-  </data>
-  <data name="GenreNaming" xml:space="preserve">
-    <value>Namensgebung Genre</value>
-  </data>
-  <data name="GenreNamingDescription" xml:space="preserve">
-    <value>Namensquelle für das Genre-Tag. &lt;Quelle&gt;: aus aax-Datei; &lt;Standard&gt;: setzt zu 'Hörbuch'; &lt;Benutzerdefiniert&gt;: eigene Angabe.</value>
-  </data>
-  <data name="GenreName" xml:space="preserve">
-    <value>Benutzerdefiniertes Genre</value>
-  </data>
-  <data name="GenreNameDescription" xml:space="preserve">
-    <value>Benutzerdefiniertes Tag für das Genre</value>
-  </data>
-  <data name="ChapterNaming" xml:space="preserve">
-    <value>Namensgebung Kapitelordner</value>
-  </data>
-  <data name="ChapterNamingDescription" xml:space="preserve">
-    <value>Namensquelle für Kapitelordner, falls erforderlich und nicht unterbunden (keine Ordner). &lt;Quelle&gt;: aus aax-Datei; &lt;Standard&gt;: setzt zu 'Kapitel'; &lt;Benutzerdefiniert&gt;: eigene Angabe.</value>
-  </data>
-  <data name="ChapterName" xml:space="preserve">
-    <value>Benutzerdefinierter Kapitelordner</value>
-  </data>
-  <data name="ChapterNameDescription" xml:space="preserve">
-    <value>Benutzerdefinierter Präfix für "Kapitel"-Ordner.</value>
-  </data>
-  <data name="SeriesTitleLeft" xml:space="preserve">
-    <value>Serientitel vor Doppelpunkt</value>
-  </data>
-  <data name="SeriesTitleLeftDescription" xml:space="preserve">
-    <value>Für gekürzten Buchtitel, Serientitel wird entfernt: Titel der Serie steht vor Buchtitel, wenn [ja], sonst hinter Buchtitel, immer getrennt durch Doppelpunkt.</value>
-  </data>
-  <data name="LongBookTitle" xml:space="preserve">
-    <value>Langer Buchtitel</value>
-  </data>
-  <data name="LongBookTitleDescription" xml:space="preserve">
-    <value>Resultierender Buchtitel soll auch den Serientitel enthalten, wenn nicht [nein]. Reihenfolge wählbar, Buch- oder Serientitel zuerst. Sonst wird der Serientitel entfernt, ab/bis Doppelpunkt. [wie vorgefunden] übernimmt den ganzen Titel, ohne Untersuchung.</value>
+  <data name="$this.Text" xml:space="preserve">
+    <value>Was is neu?</value>
   </data>
 </root>
